[gd_scene load_steps=15 format=3 uid="uid://dmc2qkoqjaey"]

[ext_resource type="Script" path="res://Scripts/Autoloads/global.gd" id="1_ctehr"]
[ext_resource type="Texture2D" uid="uid://donknb87vj1ut" path="res://Assets/Images/loading_left.png" id="2_fk08d"]
[ext_resource type="Texture2D" uid="uid://b5i1ge5a5akij" path="res://Assets/Images/loading_right.png" id="3_5l1ee"]
[ext_resource type="AudioStream" uid="uid://ba2dmr5ueravf" path="res://Assets/Sounds/FXs/GUITransitionClose #280178.wav" id="4_ae0wk"]
[ext_resource type="AudioStream" uid="uid://dg5wc8oifuc2b" path="res://Assets/Sounds/FXs/GUITransitionOpen #280669.wav" id="4_uv4i6"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="6_hmitq"]
[ext_resource type="Script" path="res://Scripts/Autoloads/scene_changer.gd" id="6_j5d85"]

[sub_resource type="Animation" id="Animation_0f6vk"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/LoadingLeft:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-480, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LoadingLeft:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/LoadingLeft:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/LoadingRight:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2400, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/LoadingRight:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/LoadingRight:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_1jyf2"]
resource_name = "close"
length = 0.4
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/LoadingLeft:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-480, -0.25, 0, 0.25, 0, 480, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LoadingLeft:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/LoadingLeft:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/LoadingRight:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2400, -0.25, 0, 0.25, 0, 1440, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/LoadingRight:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/LoadingRight:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CloseAudio:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xh53a"]
resource_name = "open"
length = 0.4
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/LoadingRight:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1440, -0.25, 0, 0.25, 0, 2400, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LoadingRight:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/LoadingRight:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/LoadingLeft:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(480, -0.25, 0, 0.25, 0, -480, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/LoadingLeft:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/LoadingLeft:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("OpenAudio:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7isat"]
_data = {
"RESET": SubResource("Animation_0f6vk"),
"close": SubResource("Animation_1jyf2"),
"open": SubResource("Animation_xh53a")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6behv"]
bg_color = Color(0.344076, 0.344076, 0.344076, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfa21"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifewn"]
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Global" type="Node"]
process_mode = 3
script = ExtResource("1_ctehr")
tip_text_list = Array[String](["当你凝视这条tip的时候，这条tip也在凝视着你", "这是一条测试tip", "如果在评论区胡乱投稿可能会被UP亲切问候哦", "炮塔发射的炮弹中心伤害最高，离中心位置越远伤害越低", "对付重甲单位魔法伤害会有效得多", "BAKA!BAKA!", "敌人越集中，炮塔的攻击越有效", "可以让多个防御塔搭配兵营来对敌人进行集中攻击", "有时候善用快捷键可以让你有更多更好的操作空间", "提前召唤下一波敌人可以额外获得绿宝石奖励并减少技能冷却", "真实伤害是一种高贵的伤害，但它仍受总伤减免影响", "善用兵营调整集结点，可以创造更棒的策略", "别用你那魔法塔盯着魔法抗性的敌人打了……", "咚咚咚，你三星没了", "诶？你怎么17血了？", "少女折寿中……", "正在生成世界……", "烤斤棍烫烫烫", "逸一时误一世", "来玩GODOT吧", "试试海贼保卫战吧", "投入开源的怀抱吧", "missingno...", "所见即所得！", "这是个游戏！", "你不了解，所有你所谓的“bug”都是特性", "不知道你有没有注意过丛林的墓碑，那里埋藏着秘密", "(·▽·)咕咕~", "猜猜你要重新加载多少次才能再看到这条tip", "我们终会在旅途的终点重逢……"])
version_text = "0.4.2"
total_stars = 98

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7isat")
}

[node name="OpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uv4i6")
volume_db = 4.0
bus = &"Sound"

[node name="CloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ae0wk")
bus = &"Sound"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="LoadingLeft" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-480, 540)
texture = ExtResource("2_fk08d")

[node name="LoadingRight" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(2400, 540)
texture = ExtResource("3_5l1ee")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -590.0
offset_top = 244.0
offset_right = 590.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6behv")
theme_override_styles/fill = SubResource("StyleBoxFlat_cfa21")
max_value = 1.0
step = 0.0
value = 1.0
show_percentage = false

[node name="TipPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -437.0
offset_top = 342.0
offset_right = 437.0
offset_bottom = 486.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ifewn")

[node name="TipLabel" type="Label" parent="CanvasLayer/TipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_hmitq")
theme_override_font_sizes/font_size = 48
text = "test"
vertical_alignment = 1
autowrap_mode = 3

[node name="SceneChanger" type="Node" parent="."]
script = ExtResource("6_j5d85")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
